# django-boatservice

./: .env  .gitignore  README.md  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_photo.py
boats/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
boats/migrations/: 0001_initial.py  0002_boat_name_alter_amenity_desc.py  0003_alter_amenity_options.py  0004_boat_category.py  0005_alter_boat_amenities_alter_boat_category_and_more.py
boats/templates/: all_boats.html  boat_details.html
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
medias/: models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reservations/: admin.py  models.py  serializers.py
reservations/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_boat_alter_review_seaplatform.py  0003_alter_review_boat_alter_review_seaplatform_and_more.py
seaplatforms/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
seaplatforms/migrations/: 0001_initial.py  0002_seaplatform_category.py  0003_alter_seaplatform_category_alter_seaplatform_owner_and_more.py  0004_seaplatform_people.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py
